@@ -1,3 +1,7 @@
+2013-03-12  Mark Wielaard  <mjw@redhat.com>
+
+	* dwfl_getsrclines.c (dwfl_getsrclines): Return 0 on success.
+
 2013-02-22  Mark Wielaard  <mjw@redhat.com>
 
 	* open.c (__libdw_gunzip,__libdw_bunzip2,__libdw_unlzma): Define
